--- a/src/index.css
+++ b/src/index.css
@@ -208,6 +208,21 @@ body.dark-mode .header {
   color: #f5f6fa;
 }
 
+.footer {
+  position: fixed;
+  bottom: 0px;
+  width: 100%;
+  display: flex;
+  align-items: center;
+  background: #fff;
+  box-shadow: 0 2px 8px rgba(0, 0, 0, 0.04);
+}
+
+body.dark-mode .footer {
+  background-color: #181a2a;
+  color: #f5f6fa;
+}
+
 .title {
   padding-left: 16px;
   margin: 0px;
