--- a/src/index.css
+++ b/src/index.css
@@ -86,6 +86,9 @@ body.dark-mode #tab {
   border: none;
   background: #f1f2f6;
   font-weight: 500;
+  display: table-cell !important;
+  text-align: center;
+  vertical-align: middle;
 }
 
 .react-tabs__tab--selected {
@@ -191,7 +194,7 @@ body.dark-mode .tray-panel {
 
 .header {
   display: flex;
-  align-items: center;
+  justify-content: space-between;
   padding: 16px;
   background: #fff;
   box-shadow: 0 2px 8px rgba(0, 0, 0, 0.04);
@@ -284,6 +287,10 @@ body.dark-mode .modal-content {
   gap: 0.5rem;          /* space between icon and text */
 }
 
+.icon-text p {
+  display: contents;
+}
+
 .camera-controls {
   position: absolute;
   top: 8rem;
@@ -318,22 +325,92 @@ body.dark-mode .link {
    color: rgb(0, 0, 0);
 }
 
+.tray-canvas {
+  width: 100%;
+  height: 100%;
+  border-radius: 16px;
+}
+
+.header-buttons {
+  gap: 1rem;
+  z-index: 1000; 
+  display: flex; 
+  flex-direction: row;
+}
+
+.camera-controls .button{
+    width: 100%;
+    height: 40px;
+  }
+
+  .camera-controls i{
+  }
+
+.header-title {
+  display: flex;
+  flex-direction: row;
+  align-items: center;
+}
 
 /* Medium screens */
 @media all and (max-width: 800px) { 
   .container{
-    flex-direction: column;
+    flex-direction: column-reverse;
     width: 100%;
   }
 
   .trayFrame{
-    width: 100%;
+  width: 100%;
+  max-height: 25%;
+  height: 25%;
+  border-radius: 0px;
+  min-height: 25vh;
+  position: relative;
   }
 
   .tray-panel{
-   display: none;
+    border-radius: 0;
+    padding: 0;
+    margin-left: 0;
+    margin-right: 0;
+    width: 100%;
   }
+
+  .tray-canvas {
+  border-radius: 0px;
+  height: 25vh !important;
   }
+
+  .title {
+    display: none;
+  }
+
+  .header-title img{
+    margin-right: 12px;
+  }
+
+  .camera-controls{
+    right: 0rem;
+    top: 0rem;
+    flex-direction: column;
+    height: 100%;
+    width: fit-content;
+    padding: 0;
+    padding-left: 5px;
+    padding-right: 5px;
+    border-radius: 0;
+  }
+
+    .camera-controls .button{
+    font-size: 80%;
+    padding: 10px;
+  }
+
+  .icon-text p {
+  display: none;
+  }
+
+}
 
 /* Small screens */
 @media all and (max-width: 500px) {
